upgrade to rhel 6.6 files
this uses default colors, etc.

--- a/isolinux/6/isolinux.cfg
+++ b/isolinux/6/isolinux.cfg
@@ -5,21 +5,34 @@ timeout 50
 display boot.msg
 
 menu background splash.jpg
-menu title RHEL 6.5 for CoverMyMeds 
+menu title Welcome to Red Hat Enterprise Linux 6.6!
 menu color border 0 #ffffffff #00000000
-menu color sel 7 #ffD3215D #00000000
-menu color title 0 #ffF49332 #00000000
-menu color tabmsg 0 #ffF49332 #00000000 none
-menu color timeout 0 #ffF49332 #00000000 none
-menu color cmdline 0 #ffF49332 #00000000 none
+menu color sel 7 #ffffffff #ff000000
+menu color title 0 #ffffffff #00000000
+menu color tabmsg 0 #ffffffff #00000000
 menu color unsel 0 #ffffffff #00000000
 menu color hotsel 0 #ff000000 #ffffffff
 menu color hotkey 7 #ffffffff #ff000000
 menu color scrollbar 0 #ffffffff #00000000
 
 label linux
-  menu label ^Install RHEL 6.5
+  menu label ^Install or upgrade an existing system
   menu default
   kernel vmlinuz
-  append initrd=initrd.img KICKSTART_PARMS 
+  append initrd=initrd.img KICKSTART_PARMS
+label vesa
+  menu label Install system with ^basic video driver
+  kernel vmlinuz
+  append initrd=initrd.img xdriver=vesa nomodeset
+label rescue
+  menu label ^Rescue installed system
+  kernel vmlinuz
+  append initrd=initrd.img rescue
+label local
+  menu label Boot from ^local drive
+  localboot 0xffff
+label memtest86
+  menu label ^Memory test
+  kernel memtest
+  append -
 
