--- a/isolinux/7/isolinux.cfg
+++ b/isolinux/7/isolinux.cfg
@@ -8,7 +8,7 @@ display boot.msg
 # the menu itself for as long as the screen remains in graphics mode.
 menu clear
 menu background splash.png
-menu title Red Hat Enterprise Linux 7.0
+menu title Red Hat Enterprise Linux 7.1
 menu vshift 8
 menu rows 18
 menu margin 8
@@ -59,15 +59,15 @@ menu separator # insert an empty line
 menu separator # insert an empty line
 
 label linux
-  menu label ^Install Red Hat Enterprise Linux 7.0
+  menu label ^Install Red Hat Enterprise Linux 7.1
   menu default
   kernel vmlinuz
   append initrd=initrd.img KICKSTART_PARMS
 
 label check
-  menu label Test this ^media & install Red Hat Enterprise Linux 7.0
+  menu label Test this ^media & install Red Hat Enterprise Linux 7.1
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.0\x20Server.x86_64 rd.live.check quiet
+  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.1\x20x86_64 rd.live.check quiet
 
 menu separator # insert an empty line
 
@@ -77,13 +77,13 @@ menu begin ^Troubleshooting
 
 label vesa
   menu indent count 5
-  menu label Install Red Hat Enterprise Linux 7.0 in ^basic graphics mode
+  menu label Install Red Hat Enterprise Linux 7.1 in ^basic graphics mode
   text help
 	Try this option out if you're having trouble installing
-	Red Hat Enterprise Linux 7.0.
+	Red Hat Enterprise Linux 7.1.
   endtext
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.0\x20Server.x86_64 xdriver=vesa nomodeset quiet
+  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.1\x20x86_64 xdriver=vesa nomodeset quiet
 
 label rescue
   menu indent count 5
@@ -93,7 +93,7 @@ label rescue
 	and edit config files to try to get it booting again.
   endtext
   kernel vmlinuz
-  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.0\x20Server.x86_64 rescue quiet
+  append initrd=initrd.img inst.stage2=hd:LABEL=RHEL-7.1\x20x86_64 rescue quiet
 
 label memtest
   menu label Run a ^memory test
